--- a/Doctors1.html
+++ b/Doctors1.html
@@ -295,8 +295,8 @@
                     <h3>Important Links</h3>
                     <p>Contact Number: +94 71 99 25 400</p>
                     <p>Email:Healthyguard@gmail.com</p>
-                    <p><a href="../hospital mangment/contact us (2).html" class="btnn1">Location</a></p>
-                    <p><a href="../hospital mangment/about1.html" class="btnn1">Chairmans Message</a></p>
+                    <p><a href="./contact us (2).html" class="btn1">Location</a></p>
+                    <p><a href="./about1.html" class="btn1">Chairmans Message</a></p>
                 </div>
             </div>
             <div class="footer-bottom">
