--- a/about1.html
+++ b/about1.html
@@ -105,21 +105,21 @@
             <h1>BRANCHES</h1>
             <div class="grids-container">
                 <div class="grid-items">
-                    <img src="../hospital mangment/photos/Memorial Hermann Katy Hospital.jpeg" alt="Memorial Hermann Katy Hospital" class="hos">
+                    <img src="./photos/Memorial Hermann Katy Hospital.jpeg" alt="Memorial Hermann Katy Hospital" class="hos">
                     <h3>Memorial Hermann Katy Hospital</h3>
                     <p>
                         <a href="https://maps.app.goo.gl/yXPNP6ekf9oFCjr6A" target="_blank">Located in Colombo</a> <!-- Link to Google Maps -->
                     </p>
                 </div>
                 <div class="grid-items">
-                    <img src="../hospital mangment/photos/Baptist Health Medical Center - Conway.jpeg" alt="Baptist Health Medical Center" class="hos">
+                    <img src="./photos/Baptist Health Medical Center - Conway.jpeg" alt="Baptist Health Medical Center" class="hos">
                     <h3>Baptist Health Medical Center</h3>
                     <p>
                         <a href="https://maps.app.goo.gl/3spkfaKb7L5NSmrt8" target="_blank">Located in Matale</a> <!-- Link to Google Maps -->
                     </p>
                 </div>
                 <div class="grid-items">
-                    <img src="../hospital mangment/photos/EBD Theory Becomes Practice At WellStar Paulding Hospital - HCD Magazine.jpeg" alt="WellStar Paulding Hospital" class="hos">
+                    <img src="./photos/EBD Theory Becomes Practice At WellStar Paulding Hospital - HCD Magazine.jpeg" alt="WellStar Paulding Hospital" class="hos">
                     <h3>WellStar Paulding Hospital</h3> 
                     <p>
                         <a href="https://maps.app.goo.gl/n6EFAZqhSDmB58wQ8" target="_blank">Located in Jaffna</a> <!-- Link to Google Maps -->
@@ -209,7 +209,7 @@
         <section class="about-uss">
             <div class="row">
                 <div class="about-cols image-col">
-                    <img src="../hospital mangment/photos/Executive portraits.jpeg" alt="Chairman">
+                    <img src="./photos/Executive portraits.jpeg" alt="Chairman">
                 </div>
                 <div class="about-cols text-col">
                     <h1>Chairman's Message</h1>
@@ -243,8 +243,8 @@
                     <h3>Important Links</h3>
                     <p>Contact Number: +94 71 99 25 400</p>
                     <p>Email:Healthyguard@gmail.com</p>
-                    <p><a href="../hospital mangment/contact us (2).html" class="btn1">Location</a></p>
-                    <p><a href="../hospital mangment/about1.html" class="btn1">Chairmans Message</a></p>
+                    <p><a href="./contact us (2).html" class="btn1">Location</a></p>
+                    <p><a href="./about1.html" class="btn1">Chairmans Message</a></p>
                 </div>
             </div>
             <div class="footer-bottom">
