--- a/contact us (2).html
+++ b/contact us (2).html
@@ -165,7 +165,7 @@
         <p>Please feel free to get in touch with us and our dedicated team will assist you to obtain the necessary information</p>
         <div class="row">
             <div class="container">
-                <img src="../hospital mangment/photos/tech.jpeg" alt="Hospital Image" class="hospital">
+                <img src="./photos/tech.jpeg" alt="Hospital Image" class="hospital">
             </div>
             <div class="container">
                 <form action="POST" class="form">
@@ -228,8 +228,8 @@
                     <h3>Important Links</h3>
                     <p>Contact Number: +94 71 99 25 400</p>
                     <p>Email:Healthyguard@gmail.com</p>
-                    <p><a href="../hospital mangment/contact us (2).html" class="btnn1">Location</a></p>
-                    <p><a href="../hospital mangment/about1.html" class="btnn1">Chairmans Message</a></p>
+                    <p><a href="./contact us (2).html" class="btn1">Location</a></p>
+                    <p><a href="./about1.html" class="btn1">Chairmans Message</a></p>
                 </div>
             </div>
             <div class="footer-bottom">
