--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </ul>
             </div>
             <div class="facilities">
-                <video src="../hospital mangment/hos video.mp4" class="hos" controls>
+                <video src="./hos video.mp4" class="hos" controls>
                     Your browser does not support the video tag.
                 </video>
             </div>       
@@ -159,15 +159,15 @@
         <br>
         <ol style="list-style-type:1">
             <li><strong>Explore Our Services:</strong>Discover the wide range of services we offer, from emergency care to specialized treatments.</li>
-            <a href="../hospital mangment/services1.html" class="btnn">Learn More</a>
+            <a href="./services1.html" class="btnn">Learn More</a>
             <li><strong>Book an Appointment:</strong>Easily schedule your visit by choosing the department, date, and time.</li>
-            <a href="../hospital mangment/contact us (2).html" class="btnn">Book Now</a>
+            <a href="./contact us (2).html" class="btnn">Book Now</a>
             <li><strong>Access Patient Portal:</strong>Manage your health information, schedule appointments, and more through our secure patient portal.</li>
-            <a href="../hospital mangment/Doctors1.html" class="btnn">Access Portal</a>
+            <a href="./Doctors1.html" class="btnn">Access Portal</a>
             <li><strong>Understand Our Facilities:</strong> Learn about our state-of-the-art facilities and the dedicated professionals who are here to serve you.</li>
-            <a href="../hospital mangment/services1.html" class="btnn">Tour Our Facilities</a>
+            <a href="./services1.html" class="btnn">Tour Our Facilities</a>
             <li><strong>Contact Us:</strong> Get in touch with our team for any inquiries or assistance you may need.</li>
-            <a href="../hospital mangment/contact us (2).html" class="btnn">Contact Us</a>
+            <a href="./contact us (2).html" class="btnn">Contact Us</a>
         </ol>
     </section>
     <section>
@@ -195,8 +195,8 @@
                     <h3>Important Links</h3>
                     <p>Contact Number: +94 71 99 25 400</p>
                     <p>Email:Healthyguard@gmail.com</p>
-                    <p><a href="../hospital mangment/contact us (2).html" class="btn1">Location</a></p>
-                    <p><a href="../hospital mangment/about1.html" class="btn1">Chairmans Message</a></p>
+                    <p><a href="./contact us (2).html" class="btn1">Location</a></p>
+                    <p><a href="./about1.html" class="btn1">Chairmans Message</a></p>
                 </div>
             </div>
             <div class="footer-bottom">
