--- a/services1.html
+++ b/services1.html
@@ -179,31 +179,31 @@
                         <i class="fi fi-tr-hands-heart"></i>
                     </div>
                     <div class="cards">
-                        <img src="../hospital mangment/photos/Add a heading (1).png" alt="Heading 2" class="core">
+                        <img src="./photos/Add a heading (1).png" alt="Heading 2" class="core">
                         <i class="fi fi-tr-introduction-handshake"></i>
                     </div>
                     <div class="cards">
-                        <img src="../hospital mangment/photos/Add a heading (2).png" alt="Heading 3" class="core">
+                        <img src="./photos/Add a heading (2).png" alt="Heading 3" class="core">
                         <i class="fi fi-ts-holding-hand-gear"></i>
                     </div>
                     <div class="cards">
-                        <img src="../hospital mangment/photos/Add a heading (3).png" alt="Heading 4" class="core">
+                        <img src="./photos/Add a heading (3).png" alt="Heading 4" class="core">
                         <i class="fi fi-ss-hospital"></i>
                     </div>
                     <div class="cards">
-                        <img src="../hospital mangment/photos/Add a heading (4).png" alt="Heading 5" class="core">
+                        <img src="./photos/Add a heading (4).png" alt="Heading 5" class="core">
                         <i class="fi fi-ts-trust-alt"></i>
                     </div>
                     <div class="cards">
-                        <img src="../hospital mangment/photos/Add a heading (5).png" alt="Heading 6" class="core">
+                        <img src="./photos/Add a heading (5).png" alt="Heading 6" class="core">
                         <i class="fi fi-ts-hr-group"></i>
                     </div>
                     <div class="cards">
-                        <img src="../hospital mangment/photos/Add a heading (6).png" alt="Heading 7" class="core">
+                        <img src="./photos/Add a heading (6).png" alt="Heading 7" class="core">
                         <i class="fi fi-ts-insight-alt"></i>
                     </div>
                     <div class="cards">
-                        <img src="../hospital mangment/photos/AD8.png" alt="Heading 8" class="core">
+                        <img src="./photos/AD8.png" alt="Heading 8" class="core">
                         <i class="fi fi-ts-lightbulb-setting"></i>
                     </div>
                 </div>
@@ -236,8 +236,8 @@
                     <h3>Important Links</h3>
                     <p>Contact Number: +94 71 99 25 400</p>
                     <p>Email:Healthyguard@gmail.com</p>
-                    <p><a href="../hospital mangment/contact us (2).html" class="btnn1">Location</a></p>
-                    <p><a href="../hospital mangment/about1.html" class="btnn1">Chairmans Message</a></p>
+                    <p><a href="./contact us (2).html" class="btn1">Location</a></p>
+                    <p><a href="./about1.html" class="btn1">Chairmans Message</a></p>
                 </div>
             </div>
             <div class="footer-bottom">
