--- a/services1.html
+++ b/services1.html
@@ -175,7 +175,7 @@
             <div class="flex-containers" id="flex">
                 <div class="grid-containers">
                     <div class="cards">
-                        <img src="../hospital mangment/photos/Add a heading.png" alt="Heading 1" class="core">
+                        <img src="./photos/Add a heading.png" alt="Heading 1" class="core">
                         <i class="fi fi-tr-hands-heart"></i>
                     </div>
                     <div class="cards">
